--- a/index.html
+++ b/index.html
@@ -61,9 +61,11 @@
 
         #features {
             top: 0;
-            height: 100px;
+            height: 150px; /* Increase height to allow more text */
+            width: 300px; /* Increase width for better readability */
             margin-top: 20px;
-            width: 250px;
+            padding: 10px; /* Add padding for better spacing */
+            font-size: 14px;
         }
 
         #legend {
@@ -106,13 +108,13 @@
         const map = new mapboxgl.Map({
             container: 'map', // container ID
             style: 'mapbox://styles/mapbox/light-v10', // style URL
-            zoom: 3, // starting zoom
-            center: [-100, 40] // starting center
+            zoom: 6.5, // starting zoom
+            center: [-120.7401, 47.7511] // starting center
         });
 
         // load data and add as layer
         async function geojsonFetch() {
-            let response = await fetch('assets/state_data.geojson');
+            let response = await fetch('assets/wa-covid-data-102521.geojson');
             let state_data = await response.json();
 
             map.on('load', function loadingData() {
@@ -128,52 +130,54 @@
                     'paint': {
                         'fill-color': [
                             'step',
-                            ['get', 'density'],
-                            '#FFEDA0',   // stop_output_0
-                            10,          // stop_input_0
-                            '#FED976',   // stop_output_1
-                            20,          // stop_input_1
-                            '#FEB24C',   // stop_output_2
-                            50,          // stop_input_2
-                            '#FD8D3C',   // stop_output_3
-                            100,         // stop_input_3
-                            '#FC4E2A',   // stop_output_4
-                            200,         // stop_input_4
-                            '#E31A1C',   // stop_output_5
-                            500,         // stop_input_5
-                            '#BD0026',   // stop_output_6
-                            1000,        // stop_input_6
-                            "#800026"    // stop_output_7
-                        ],
-                        'fill-outline-color': '#BBBBBB',
-                        'fill-opacity': 0.7,
+                            ['get', 'deathPer10k'],  
+                            '#f7fcf0', 5,
+                            '#e0f3db', 10,
+                            '#ccebc5', 20,
+                            '#a8ddb5', 30,
+                            '#7bccc4', 50,
+                            '#4eb3d3', 75,
+                            '#2b8cbe', 100,
+                            '#08589e'
+                        ]
+                    }
+                });
+                
+                map.addLayer({
+                    'id': 'county-borders',
+                    'type': 'line',
+                    'source': 'state_data',  
+                    'layout': {},
+                    'paint': {
+                        'line-color': '#000000',  
+                        'line-width': 0.5
                     }
                 });
 
                 const layers = [
-                    '0-9',
-                    '10-19',
-                    '20-49',
-                    '50-99',
-                    '100-199',
-                    '200-499',
-                    '500-999',
-                    '1000 and more'
+                    '0-5',
+                    '6-10',
+                    '11-20',
+                    '21-30',
+                    '31-50',
+                    '51-75',
+                    '76-100',
+                    '100+'
                 ];
                 const colors = [
-                    '#FFEDA070',
-                    '#FED97670',
-                    '#FEB24C70',
-                    '#FD8D3C70',
-                    '#FC4E2A70',
-                    '#E31A1C70',
-                    '#BD002670',
-                    '#80002670'
+                    '#f7fcf0',
+                    '#e0f3db',
+                    '#ccebc5',
+                    '#a8ddb5',
+                    '#7bccc4',
+                    '#4eb3d3',
+                    '#2b8cbe',
+                    '#08589e'
                 ];
 
                 // create legend
                 const legend = document.getElementById('legend');
-                legend.innerHTML = "<b>Population Density<br>(people/sq.mi.)</b><br><br>";
+                legend.innerHTML = "<b>COVID-19 Death Rate<br>(per 10k people)</b><br><br>";
 
 
                 layers.forEach((layer, i) => {
@@ -192,12 +196,13 @@
             });
 
             map.on('mousemove', ({point}) => {
-                const state = map.queryRenderedFeatures(point, {
+                const county = map.queryRenderedFeatures(point, {
                     layers: ['state_data_layer']
                 });
-                document.getElementById('text-description').innerHTML = state.length ?
-                    `<h3>${state[0].properties.name}</h3><p><strong><em>${state[0].properties.density}</strong> people per square mile</em></p>` :
-                    `<p>Hover over a state!</p>`;
+                document.getElementById('text-description').innerHTML = county.length ?
+                    `<h3>${county[0].properties.name} County</h3>
+                    <p><strong>Death Rate:</strong> <em>${county[0].properties.deathPer10k}</em> per 10k people</p>` :
+                    `<p>Hover over a county!</p>`
             });
         }
 
